--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
 <title>Sonic CD Intro</title>
-<object width="800" height="800" data="http://download969.mediafire.com/c6o84w985r3g/c4dbb9czee1kzm1/Soniccd.swf"></object>
+<object width="800" height="800" data="https://github.com/mwear3/soniccdintrojp/blob/master/Sonic-CD-_JPEU_-Opening-Video.swf?raw=true"></object>
